checkResult button now shows sent and received word group.  Error is not calculated yet.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,10 @@ noiseaccordion {
     width: 1px;
 }
 
+/*.different {*/
+/*    color: red;*/
+/*}*/
+
 section:last-of-type {
     padding-bottom: 2rem;
 }
